Forms example: Add link to issue 252

--- a/examples/forms/popup-error.html
+++ b/examples/forms/popup-error.html
@@ -26,6 +26,10 @@
   <main>
     <h1>Pizza Ordering Form with Popup Errors</h1>
     <p>
+      <strong>NOTE:</strong> This is an early draft of a new pattern. Please provide feedback in
+      <a href="https://github.com/w3c/aria-practices/issues/252">issue 252.</a>
+    </p>
+    <p>
       The following pizza ordering form example using standard HTML5 form controls demonstrates how to make required form fields, identifying forms with invalid values, instructional information and popup error messages accessible to screen reader users using the <a href="../../#forms">Form Input Assistance design pattern.</a>
     </p>
 
