updated the functions of pagedownup focus

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -223,7 +223,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the previous month.</li>
-                <li>If current day of month available on the new month, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
               </ul>
             </td>
           </tr>
@@ -232,7 +232,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the previous Year.</li>
-                <li>If current day of month available on the new month/Year, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
               </ul>
             </td>
           </tr>
@@ -241,7 +241,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the next month.</li>
-                <li>If current day of month available on the new month, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
               </ul>
             </td>
           </tr>
@@ -250,7 +250,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the next Year.</li>
-                <li>If current day of month available on the new month/Year, focus will be on that date, otherwise focus will be on the first date of the month.</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
               </ul>
             </td>
           </tr>
