--- a/examples/switch/switch.html
+++ b/examples/switch/switch.html
@@ -33,28 +33,32 @@
 <script src="js/switch.js" type="text/javascript"></script>
 </head>
 <body>
-  <main> <!--  Repeat the name of the example in this H1  -->
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/2">Related Issues</a></li>
+      <li><a href="../../#switch">Design Pattern</a></li>
+    </ul>
+  </nav>
+  <main>
   <h1>Switch Example</h1>
-  <p>Comments on this code example are welcome in <a href="https://github.com/w3c/aria-practices/issues/243">Issue 243</a>.</p>
   <p>
-    <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-    The below example section demonstrates a switch that implements the <a href="../../#switch">design pattern for switch</a>.
+    <strong>NOTE:</strong> This is a new example.
+    Please provide feedback in
+    <a href="https://github.com/w3c/aria-practices/issues/243">Issue 243.</a>
+  </p>
+  <p>
+    The below example section includes two text appearance controls that demonstrate the <a href="../../#switch">design pattern for switch</a>.
   </p>
   <p>Similar examples include: </p>
   <ul>
     <li><a href="../checkbox/checkbox-1/checkbox-1.html">Simple Two-State Checkbox Example</a>: Demonstrates a simple 2-state checkbox.</li>
-    <!--  list other examples that implement the same design pattern. -->
   </ul>
 
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
-    <!--
-      Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.
-      The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
-      If you change the ID of this div, be sure to update the parameters of the sourceCode.add() function call, which is made following the div with id="sc1" where the HTML is render.
-      The div for the rendered HTML source is in the last section of the page.
-    -->
     <div id="ex1">
         <div id="switch-text"
           role="switch checkbox"
@@ -80,10 +84,10 @@
     <h2>Accessibility Features</h2>
     <ol>
       <li>
-        A switch should be used when the change is automatically saved.
-        There should be no need to activate a “save” button for the change to take effect.
+        Switches are commonly used when their effect is immediate and their state is automatically saved.
+        That is, there is no need to activate a <q>save</q> button for changes caused by a switch to take effect and persist.
       </li>
-      <li>There is a fallback role of <code>checkbox</code> in case the used assistive technology doesn’t support the <code>switch</code> role.</li>
+      <li>There is a fallback role of <code>checkbox</code> in case an assistive technology doesn’t support the <code>switch</code> role.</li>
     </ol>
   </section>
 
