--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -223,7 +223,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the previous month.</li>
-                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of previous or next week</li>
               </ul>
             </td>
           </tr>
@@ -232,7 +232,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the previous Year.</li>
-                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of previous or next week</li>
               </ul>
             </td>
           </tr>
@@ -241,7 +241,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the next month.</li>
-                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of previous or next week</li>
               </ul>
             </td>
           </tr>
@@ -250,7 +250,7 @@
             <td>
               <ul>
                 <li>Change the calendar to the next Year.</li>
-                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of last week</li>
+                <li>The focus will be on the same day of that week, if it does not exist, then it will move the focus to the same day of previous or next week</li>
               </ul>
             </td>
           </tr>
