--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -151,7 +151,7 @@
                 <a role="menuitem" href="mb-academics.html#academic">Academic Calendar</a>
               </li>
               <li role="none">
-                <a role="menuitem" href="mb-academics.html#tanscripts">Transscripts</a>
+                <a role="menuitem" href="mb-academics.html#tanscripts">Transcripts</a>
               </li>
             </ul>
           </li>
