--- a/examples/treeview/treeview-1/treeview-1a.html
+++ b/examples/treeview/treeview-1/treeview-1a.html
@@ -27,7 +27,7 @@
         <li><a href="https://github.com/w3c/aria-practices/projects/17">Related Issues</a></li>
         <li><a href="../../../#TreeView">Design Pattern</a></li>
       </ul>
-    </nav>  
+    </nav>
     <main>
       <h1>File Directory Treeview Example Using Computed Properties</h1>
       <p>
@@ -264,7 +264,7 @@
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
-          A tree item that can be expanded to reveal child items is called a parrent node.
+          A tree item that can be expanded to reveal child items is called a parent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
           An end node does not have any children.
           For a complete list of terms and definitions, see the
@@ -382,8 +382,8 @@
                 <ul>
                   <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
                   <li>
-                    Because focus movement in the tree is managed with a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    Because focus movement in the tree is managed with a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                     the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
