--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -608,7 +608,7 @@
               <ul>
                   <li>Applied only to <code>treeitem</code> elements that are parent nodes, i.e., they contain a <code>ul</code> with the <code>group</code> role.</li>
                   <li>Indicates the parent node is open, i.e., the descendant elements <strong>are</strong> visible.</li>
-                  <li>The visual indication of the expanded state is synchronized by a CSS attribute selecter.</li>
+                  <li>The visual indication of the expanded state is synchronized by a CSS attribute selector.</li>
                 </ul>
               </td>
             </tr>
