--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -404,7 +404,7 @@
           <td>
             <ul>
               <li>
-                Defines an acessible name for the <code>menubar</code>.
+                Defines an accessible name for the <code>menubar</code>.
               </li>
               <li>Helps assistive technology users understand the purpose of the menubar and
                 distinguish it from any other menubars or similar elements on the page.</li>
