--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -77,7 +77,7 @@
         <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
 
         <script type="text/javascript">
-          <!--  Javascript relavant to example -->
+          //  Javascript relevant to example
           var i;
           var str = "text"
           for(i = 0; i < str.length; i++) {
