--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -96,7 +96,7 @@
       demonstrated in this implementation, such as:</p>
     <ol>
       <li>What distinguishes this example from related examples.</li>
-      <li>Keyboard chortcuts, live regions,  unusual event handling, or other ancillary best practices that are employed.</li>
+      <li>Keyboard shortcuts, live regions,  unusual event handling, or other ancillary best practices that are employed.</li>
       <li>Do not include information that would be repeated in the following keyboard and attribute sections.</li>
       <li>Delete this section if not needed.</li>
     </ol>
