--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -535,7 +535,7 @@
           <td>
             <ul>
               <li>
-                Defines an acessible name for the <code>menu</code>.
+                Defines an accessible name for the <code>menu</code>.
               </li>
               <li>Helps assistive technology users understand the purpose of the menu and
                 distinguish it from any other menu or similar elements (e.g. menubar) on the page.</li>
