added combobox markup and description

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Date Picker Example | WAI-ARIA Authoring Practices 1.1</title>
+<title>Date Picker Combobox Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -28,7 +28,7 @@
     </ul>
   </nav>
   <main>
-    <h1>Date Picker Example</h1>
+    <h1>Date Picker Combobox Example</h1>
     <p>
       The following command and input examples demonstrate the
       <a href="../../#datepicker">date picker design pattern</a> which is an example of a <code>combobox</code> that opens a dialog box.
