--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -49,9 +49,7 @@
 
           Ex:
             <dl id="accordionGroup" role="presentation" class="Accordion" data-allow-multiple>
-
             <dl id="accordionGroup" role="presentation" class="Accordion" data-allow-toggle>
-
         -->
         <div id="accordionGroup" role="presentation" class="Accordion">
           <div role="heading" aria-level="3">
@@ -233,8 +231,7 @@
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.
-    -->
+      Update this table to describe how roles, properties, states, and tabindex are used in this example -->
     <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
