--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -125,179 +125,223 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <table aria-labelledby="kbd_label" class="def">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Function</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th><kbd>Tab</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus into and out of the toolbar.</li>
-              <li>The first control is focused if the toolbar is receiving focus for the first time after page load.</li>
-              <li>Otherwise, the most recently focused control receives focus.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Left Arrow</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus to the previous control.</li>
-              <li>If the first control has focus, focus moves to the last control.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Right Arrow</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus to the next control.</li>
-              <li>If the last control has focus, focus moves to the first control.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Enter</kbd></th>
-          <td>
-            <ul>
-              <li>Select the item if it is toolbar item or menu item</li>
-              <li>Expand the menu if it include menu items</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Down Arrow</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus to the next menu item.</li>
-              <li>If the last menu item has focus, focus moves to the first menu item.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Up Arrow</kbd></th>
-          <td>
-            <ul>
-              <li>Moves focus to the previous menu item.</li>
-              <li>If the first menu item has focus, focus moves to the last menu item.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>Home</kbd></th>
-          <td>Moves focus to the first control.</td>
-        </tr>
-        <tr>
-          <th><kbd>End</kbd></th>
-          <td>Moves focus to the last control.</td>
-        </tr>
-      </tbody>
-    </table>
+
+
+
+    <section>
+      <h3 id="kbd_label_1">Toolbar</h3>
+      <table aria-labelledby="kbd_label_1" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Tab</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus into and out of the toolbar.</li>
+                <li>The first control is focused if the toolbar is receiving focus for the first time after page load.</li>
+                <li>Otherwise, the most recently focused control receives focus.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Left Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the previous control.</li>
+                <li>If the first control has focus, focus moves to the last control.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Right Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the next control.</li>
+                <li>If the last control has focus, focus moves to the first control.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Enter</kbd></th>
+            <td>
+              <ul>
+                <li>Select the toolbar item.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Home</kbd></th>
+            <td>Moves focus to the first control.</td>
+          </tr>
+          <tr>
+            <th><kbd>End</kbd></th>
+            <td>Moves focus to the last control.</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+    <section>
+      <h3 id="kbd_label_2">Menu Button</h3> 
+      <table aria-labelledby="kbd_label_2" class="def">
+        <thead>
+          <tr>
+            <th>Key</th>
+            <th>Function</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th><kbd>Enter</kbd></th>
+            <td>
+              <ul>
+                <li>Select the menu item.</li>
+                <li>Expand the menu if it include menu items.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Down Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the next menu item.</li>
+                <li>If the last menu item has focus, focus moves to the first menu item.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Up Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Moves focus to the previous menu item.</li>
+                <li>If the first menu item has focus, focus moves to the last menu item.</li>
+              </ul>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </section>
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <table aria-labelledby="rps_label" class="data attributes">
-      <thead>
-        <tr>
-          <th scope="col">Role</th>
-          <th scope="col">Attribute</th>
-          <th scope="col">Element</th>
-          <th scope="col">Usage</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row"><code>toolbar</code></th>
-          <td></td>
-          <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>Identifies the toolbar container.</li>
-              <li>The toolbar div is not focusable because focus is managed with a <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>aria-label=&quot;LABEL_STRING&quot;</code>
-          </th>
-          <td><code>div</code></td>
-          <td>
-            <ul>
-              <li>Provides an accessible label for the toolbar.</li>
-              <li>An invisible label is appropriate when the visual context adequately communicates purpose.</li>
-            </ul>
-        </td>
-        </tr>
-        <tr>
-          <!-- <th scope="row"><code>button</code></th> -->
-          <td></td>
-          <td></td>
-          <th scope="row">
-            <code>button</code>
-          </th>
-          <td>Identifies the element as a button.</td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>tabindex=<q>-1</q></code>
-          </th>
-          <td>
-            <code>button</code>
-          </td>
-          <td>
-            <ul>
-              <li>Makes the element focusable but not part of the page <kbd>Tab</kbd> sequence.</li>
-              <li>Applied to all elements contained in the toolbar except for one that is included in the page <kbd>Tab</kbd> sequence.</li>
-              <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row">
-            <code>tabindex=<q>0</q></code>
-          </th>
-          <td>
-            <code>button</code>
-          </td>
-          <td>
-            <ul>
-              <li>Makes the element focusable and includes it in the page <kbd>Tab</kbd> sequence.</li>
-              <li>Set on only one widget contained by the toolbar.</li>
-              <li>On page load is set on the first widget element contained by the toolbar.</li>
-              <li>Moves with focus inside the toolbar so the most recently focused element is included in the page <kbd>Tab</kbd> sequence.</li>
-              <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
-            </ul>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <th scope="row"><code>aria-disabled=&quot;true&quot;</code></th>
-          <td><code>button</code></td>
-          <td>Informs assistive technologies of the disabled state.</td>
-        </tr>
-        <tr>
+    <section>
+      <h3 id="rps_label_1">Toolbar</h3>
+      <table aria-labelledby="rps_label_1" class="data attributes">
+        <thead>
+          <tr>
+            <th scope="col">Role</th>
+            <th scope="col">Attribute</th>
+            <th scope="col">Element</th>
+            <th scope="col">Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row"><code>toolbar</code></th>
             <td></td>
-            <th scope="row"><code>aria-pressed=&quot;true&quot;</code></th>
-            <td><code>button</code></td>
-            <td>Indicate the button has been pressed</td>
-        </tr>
-        <tr>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Identifies the toolbar container.</li>
+                <li>The toolbar div is not focusable because focus is managed with a <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
             <td></td>
-            <th scope="row"><code>aria-pressed=&quot;false&quot;</code></th>
-            <td><code>button</code></td>
-            <td>Indicate the button has <b>Not</b> been pressed</td>
-        </tr>
-        <tr>
+            <th scope="row">
+              <code>aria-label=&quot;LABEL_STRING&quot;</code>
+            </th>
+            <td><code>div</code></td>
+            <td>
+              <ul>
+                <li>Provides an accessible label for the toolbar.</li>
+                <li>An invisible label is appropriate when the visual context adequately communicates purpose.</li>
+              </ul>
+          </td>
+          </tr>
+          <tr>
+            <th scope="row"><code>button</code></th>
+            <td></td>
+            <td> <code>div</code></td>
+            <td>Identifies the element as a button.</td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>tabindex=<q>-1</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Makes the element focusable but not part of the page <kbd>Tab</kbd> sequence.</li>
+                <li>Applied to all elements contained in the toolbar except for one that is included in the page <kbd>Tab</kbd> sequence.</li>
+                <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row">
+              <code>tabindex=<q>0</q></code>
+            </th>
+            <td>
+              <code>div</code>
+            </td>
+            <td>
+              <ul>
+                <li>Makes the element focusable and includes it in the page <kbd>Tab</kbd> sequence.</li>
+                <li>Set on only one widget contained by the toolbar.</li>
+                <li>On page load is set on the first widget element contained by the toolbar.</li>
+                <li>Moves with focus inside the toolbar so the most recently focused element is included in the page <kbd>Tab</kbd> sequence.</li>
+                <li>This approach to managing focus is described in the section on <a href="../../#kbd_roving_tabindex">roving tabindex</a>.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <th scope="row"><code>aria-disabled=&quot;true&quot;</code></th>
+            <td><code>div</code></td>
+            <td>Informs assistive technologies of the disabled state.</td>
+          </tr>
+          <tr>
+              <td></td>
+              <th scope="row"><code>aria-pressed=&quot;true&quot;</code></th>
+              <td><code>div</code></td>
+              <td>Indicate the button has been pressed</td>
+          </tr>
+          <tr>
+              <td></td>
+              <th scope="row"><code>aria-pressed=&quot;false&quot;</code></th>
+              <td><code>div</code></td>
+              <td>Indicate the button has <b>Not</b> been pressed</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+
+
+    <section>
+      <h3 id="rps_label_2">Toolbar</h3>
+      <table aria-labelledby="rps_label_2" class="data attributes">
+        <thead>
+          <tr>
+            <th scope="col">Role</th>
+            <th scope="col">Attribute</th>
+            <th scope="col">Element</th>
+            <th scope="col">Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
             <th scope="row"><code>menu</code></th>
             <td></td>
             <td><code>ul</code></td>
@@ -313,8 +357,12 @@
                  Identifies the menuitem.
               </td>
             </tr>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </section>
+
+
+
   </section>
 
   <section>
