--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -169,9 +169,7 @@
           <tr>
             <th><kbd>Enter</kbd></th>
             <td>
-              <ul>
-                <li>Select the toolbar item.</li>
-              </ul>
+              Select the toolbar item.
             </td>
           </tr>
           <tr>
