--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -167,7 +167,7 @@
             </td>
           </tr>
           <tr>
-            <th><kbd>Enter</kbd></th>
+            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
             <td>
               Select the toolbar item.
             </td>
@@ -194,20 +194,17 @@
         </thead>
         <tbody>
           <tr>
-            <th><kbd>Enter</kbd></th>
+            <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
             <td>
-              <ul>
-                <li>Select the menu item.</li>
-                <li>Expand the menu if it include menu items.</li>
-              </ul>
+              Expand the menu if it include menu items.
             </td>
           </tr>
           <tr>
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
-                <li>Moves focus to the next menu item.</li>
-                <li>If the last menu item has focus, focus moves to the first menu item.</li>
+                <li>Expand the menu</li>
+                <li>Move focus to the first menu item.</li>
               </ul>
             </td>
           </tr>
@@ -223,6 +220,52 @@
         </tbody>
       </table>
     </section>
+    <section>
+        <h3 id="kbd_label_2">Menu</h3> 
+        <table aria-labelledby="kbd_label_2" class="def">
+          <thead>
+            <tr>
+              <th>Key</th>
+              <th>Function</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th><kbd>Enter</kbd>,<br><kbd>Space</kbd></th>
+              <td>
+                Select the menu item.
+              </td>
+            </tr>
+            <tr>
+              <th><kbd>Down Arrow</kbd></th>
+              <td>
+                <ul>
+                  <li>Moves focus to the next menu item.</li>
+                  <li>If the last menu item has focus, focus moves to the first menu item.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <th><kbd>Up Arrow</kbd></th>
+              <td>
+                <ul>
+                  <li>Moves focus to the previous menu item.</li>
+                  <li>If the first menu item has focus, focus moves to the last menu item.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+                <th><kbd>ESC</kbd>,<br><kbd>Left Arrow</kbd>,<br><kbd>Right Arrow</kbd></th>
+                <td>
+                  <ul>
+                    <li>Close the menu.</li>
+                    <li>Move focus back to the menu button.</li>
+                  </ul>
+                </td>
+              </tr>
+          </tbody>
+        </table>
+      </section>
   </section>
 
   <section>
