--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -82,7 +82,6 @@
               role="button"
               aria-haspopup="true"
               aria-controls="menu1"
-              tabindex="1"
               class=" toolbar-item menu-button">
               <b>Fonts</b>
           </div>
@@ -315,7 +314,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>tabindex=<q>-1</q></code>
+              <code>tabindex=&quot;-1&quot;</code>
             </th>
             <td>
               <code>div</code>
@@ -331,7 +330,7 @@
           <tr>
             <td></td>
             <th scope="row">
-              <code>tabindex=<q>0</q></code>
+              <code>tabindex=&quot;0&quot;</code>
             </th>
             <td>
               <code>div</code>
@@ -356,13 +355,13 @@
             <td></td>
             <th scope="row"><code>aria-pressed=&quot;true&quot;</code></th>
             <td><code>div</code></td>
-            <td>Indicate the button has been pressed</td>
+            <td>Indicate the button has been pressed.</td>
           </tr>
           <tr>
             <td></td>
             <th scope="row"><code>aria-pressed=&quot;false&quot;</code></th>
             <td><code>div</code></td>
-            <td>Indicate the button has <b>Not</b> been pressed</td>
+            <td>Indicate the button has <b>Not</b> been pressed.</td>
           </tr>
         </tbody>
       </table>
@@ -381,22 +380,6 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row"><code>menu</code></th>
-            <td></td>
-            <td><code>ul</code></td>
-            <td>
-               Identifies the menu container.
-            </td>
-          </tr>
-          <tr>
-            <th scope="row"><code>menuitem</code></th>
-            <td></td>
-            <td><code>li</code></td>
-            <td>
-                Identifies the menuitem.
-            </td>
-          </tr>
-          <tr>
             <th scope="row"><code>button</code></th>
             <td></td>
             <td> <code>div</code></td>
@@ -405,23 +388,55 @@
           <tr>
               <td></td>
               <th scope="row"><code>aria-haspopup=&quot;true&quot;</code></th>
-              <td><code>button</code></td>
+              <td><code>div</code></td>
               <td>
                 Indicate that the button has a popup context menu.
               </td>
           </tr>
           <tr>
               <td></td>
-              <th scope="row"><code>aira-control=&quot;IDREF&quot;</code></th>
-              <td><code>button</code></td>
+              <th scope="row"><code>aira-controls=&quot;IDREF&quot;</code></th>
+              <td><code>div</code></td>
               <td>
                 Provide a reference for screen reader to navigate to the reference content.
               </td>
-          </tr>
+          </tr>          
         </tbody>
       </table>
     </section>
 
+
+    <section>
+      <h3 id="rps_label_3">Menu</h3>
+      <table aria-labelledby="rps_label_3" class="data attributes">
+        <thead>
+          <tr>
+            <th scope="col">Role</th>
+            <th scope="col">Attribute</th>
+            <th scope="col">Element</th>
+            <th scope="col">Usage</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <th scope="row"><code>menu</code></th>
+              <td></td>
+              <td><code>ul</code></td>
+              <td>
+                  Identifies the menu container.
+              </td>
+            </tr>
+            <tr>
+              <th scope="row"><code>menuitem</code></th>
+              <td></td>
+              <td><code>li</code></td>
+              <td>
+                  Identifies the menuitem.
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </section>
 
 
   </section>
