Legacy Combobox with autocomplete list example: Fix enter key documentation
For issue #855, modify the keyboard table for the textbox on examples/combobox/aria1.0pattern/combobox-autocomplete-list.html.
Change to say that it only closes the listbox.

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -163,12 +163,7 @@
           </tr>
           <tr data-test-id="textbox-key-enter">
             <th><kbd>Enter</kbd></th>
-            <td>
-              <ul>
-                <li>Sets the textbox value to the content of the selected option.</li>
-                <li>Closes the listbox.</li>
-              </ul>
-            </td>
+            <td>Closes the listbox.</td>
           </tr>
           <tr data-test-id="textbox-key-escape">
             <th><kbd>Escape</kbd></th>
