Add data-test-ids for regression tests

--- a/examples/alert/alert.html
+++ b/examples/alert/alert.html
@@ -79,13 +79,13 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="alert-role">
             <th scope="row"><code>alert</code></th>
             <td></td>
             <td><code>div</code></td>
             <td>Identifies the element as the container where alert content will be added or updated.</td>
           </tr>
-          <tr>
+          <tr data-test-id="alert-aria-live">
             <td></td>
             <th scope="row"><code>aria-live=<q>assertive</q></code></th>
             <td>Implicit on <code>div</code></td>
@@ -96,7 +96,7 @@
               </ul>
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="alert-aria-atomic">
             <td></td>
             <th scope="row"><code>aria-atomic=<q>true</q></code></th>
             <td>Implicit on <code>div</code></td>
