--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -83,7 +83,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
+          <tr data-test-id="aria-label">
             <td></td>
             <th scope="row">
               <code>aria-label=<q>Breadcrumb</q></code>
@@ -95,7 +95,7 @@
               Provides a label that describes the type of navigation provided in the <code>nav</code> element.
             </td>
           </tr>
-          <tr>
+          <tr data-test-id="aria-current">
             <td></td>
             <th scope="row">
               <code>aria-current=<q>page</q></code>
