--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -496,7 +496,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-enter-or-space">
               <th><kbd>Enter</kbd><br>or <kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -505,7 +505,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
@@ -514,7 +514,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
@@ -523,7 +523,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right Arrow</kbd></th>
               <td>
                 <ul>
@@ -533,7 +533,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left Arrow</kbd></th>
               <td>
                 <ul>
@@ -543,15 +543,15 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-home">
               <th><kbd>Home</kbd></th>
               <td>Moves focus to first node without opening or closing a node.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-end">
               <th><kbd>End</kbd></th>
               <td>Moves focus to the last node that can be focused without expanding any nodes that are closed.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-character">
               <th><kbd>a-z, A-Z</kbd></th>
               <td>
                 <ul>
@@ -561,7 +561,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-asterisk">
               <th>
                 <kbd>*</kbd> (asterisk)
               </th>
@@ -588,7 +588,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="tree-role">
               <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -603,13 +603,13 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="tree-aria-labelledby">
               <td></td>
               <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td><code>ul</code></td>
               <td>Refers to the heading element that contains the label that identifies the purpose of the <code>tree</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-role">
               <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code><br>or <code>a</code></td>
@@ -626,7 +626,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td><code>li</code><br>or <code>a</code></td>
@@ -637,7 +637,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>li</code><br>or <code>a</code></td>
@@ -653,7 +653,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
@@ -665,7 +665,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
@@ -677,13 +677,13 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-setsize">
               <td></td>
               <th scope="row"><code>aria-setsize=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
               <td>Defines the number of <code>treeitem</code> elements in the set of <code>treeitem</code> elements that are in the same branch and at the same level within the hierarchy.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-posinset">
               <td></td>
               <th scope="row"><code>aria-posinset=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
@@ -694,7 +694,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-level">
               <td></td>
               <th scope="row"><code>aria-level=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
@@ -706,7 +706,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="group-role">
               <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -718,7 +718,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="none-role">
               <th scope="row">
                 <code>none</code>
               </th>
