--- a/examples/treeview/treeview-1/treeview-1b.html
+++ b/examples/treeview/treeview-1/treeview-1b.html
@@ -442,7 +442,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-enter-or-space">
               <th><kbd>Enter</kbd><br>or <kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -451,7 +451,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
@@ -460,7 +460,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
@@ -469,7 +469,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right Arrow</kbd></th>
               <td>
                 <ul>
@@ -479,7 +479,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left Arrow</kbd></th>
               <td>
                 <ul>
@@ -489,15 +489,15 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-home">
               <th><kbd>Home</kbd></th>
               <td>Moves focus to first node without opening or closing a node.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-end">
               <th><kbd>End</kbd></th>
               <td>Moves focus to the last node that can be focused without expanding any nodes that are closed.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-character">
               <th><kbd>a-z, A-Z</kbd></th>
               <td>
                 <ul>
@@ -507,7 +507,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-asterisk">
               <th>
                 <kbd>*</kbd> (asterisk)
               </th>
@@ -534,7 +534,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="tree-role">
               <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -549,19 +549,19 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="tree-arialabelledby">
               <td></td>
               <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td><code>ul</code></td>
               <td>Refers to the heading element that contains the label that identifies the purpose of the <code>tree</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-role">
               <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code></td>
               <td>Identifies the  element as a <code>treeitem</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td><code>li</code></td>
@@ -572,7 +572,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>li</code></td>
@@ -588,7 +588,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
@@ -600,7 +600,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
@@ -612,13 +612,13 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-setsize">
               <td></td>
               <th scope="row"><code>aria-setsize=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
               <td>Defines the number of <code>treeitem</code> elements in the set of <code>treeitem</code> elements that are in the same branch and at the same level within the hierarchy.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-posinset">
               <td></td>
               <th scope="row"><code>aria-posinset=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
@@ -629,7 +629,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-level">
               <td></td>
               <th scope="row"><code>aria-level=&quot;<em>number</em>&quot;</code></th>
               <td><code>li</code></td>
@@ -641,7 +641,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="role-group">
               <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
