--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -364,7 +364,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="key-enter-or-space">
               <th><kbd>Enter</kbd><br>or <kbd>Space</kbd></th>
               <td>
                 <ul>
@@ -373,7 +373,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-down-arrow">
               <th><kbd>Down arrow</kbd></th>
               <td>
                 <ul>
@@ -382,7 +382,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-up-arrow">
               <th><kbd>Up arrow</kbd></th>
               <td>
                 <ul>
@@ -391,7 +391,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-right-arrow">
               <th><kbd>Right Arrow</kbd></th>
               <td>
                 <ul>
@@ -401,7 +401,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-left-arrow">
               <th><kbd>Left Arrow</kbd></th>
               <td>
                 <ul>
@@ -411,15 +411,15 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-home">
               <th><kbd>Home</kbd></th>
               <td>Moves focus to first node without opening or closing a node.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-end">
               <th><kbd>End</kbd></th>
               <td>Moves focus to the last node that can be focused without expanding any nodes that are closed.</td>
             </tr>
-            <tr>
+            <tr data-test-id="key-character">
               <th><kbd>a-z, A-Z</kbd></th>
               <td>
                 <ul>
@@ -429,7 +429,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="key-asterisk">
               <th>
                 <kbd>*</kbd> (asterisk)
               </th>
@@ -456,7 +456,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr data-test-id="tree-role">
               <th scope="row"><code>tree</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -471,13 +471,13 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="tree-aria-labelledby">
               <td></td>
               <th scope="row"><code>aria-labelledby=&quot;IDREF&quot;</code></th>
               <td><code>ul</code></td>
               <td>Refers to the heading element that contains the label that identifies the purpose of the <code>tree</code>.</td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-role">
               <th scope="row"><code>treeitem</code></th>
               <td></td>
               <td><code>li</code><br>or <code>a</code></td>
@@ -494,7 +494,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td><code>li</code><br>or <code>a</code></td>
@@ -505,7 +505,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-tabindex">
               <td></td>
               <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>li</code><br>or <code>a</code></td>
@@ -521,7 +521,7 @@
                  </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
               <td><code>li</code></td>
@@ -533,7 +533,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="treeitem-aria-expanded">
               <td></td>
               <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
               <td><code>li</code></td>
@@ -545,7 +545,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="group-role">
               <th scope="row"><code>group</code></th>
               <td></td>
               <td><code>ul</code></td>
@@ -557,7 +557,7 @@
                 </ul>
               </td>
             </tr>
-            <tr>
+            <tr data-test-id="none-role">
               <th scope="row">
                 <code>none</code>
               </th>
