Add data-test-ids to table/table.html

--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -103,13 +103,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr data-test-id="table-role">
           <th scope="row"><code>table</code></th>
           <td></td>
           <td><code>div</code></td>
           <td>Identifies the element containing the table structure.</td>
         </tr>
-        <tr>
+        <tr data-test-id="table-aria-label">
           <td></td>
           <th scope="row">
             <code>aria-label=&quot;Students&quot;</code>
@@ -117,7 +117,7 @@
           <td><code>div</code></td>
           <td>Provides an accessible name for the table.</td>
         </tr>
-        <tr>
+        <tr data-test-id="table-aria-describedby">
           <td></td>
           <th scope="row">
             <code>aria-describedby=&quot;IDREF&quot;</code>
@@ -125,7 +125,7 @@
           <td><code>div</code></td>
           <td>Refers to the element that serves as the caption for the table.</td>
         </tr>
-        <tr>
+        <tr data-test-id="rowgroup-role">
           <th scope="row"><code>rowgroup</code></th>
           <td></td>
           <td><code>div</code></td>
@@ -136,19 +136,19 @@
             </ul>
           </td>
         </tr>
-        <tr>
+        <tr data-test-id="row-role">
           <th scope="row"><code>row</code></th>
           <td></td>
           <td><code>div</code></td>
           <td>Identifies each element that contains the cells for a row.</td>
         </tr>
-        <tr>
+        <tr data-test-id="columnheader-role">
           <th scope="row"><code>columnheader</code></th>
           <td></td>
           <td><code>span</code></td>
           <td>Identifies elements that serve as a cell containing a column label.</td>
         </tr>
-        <tr>
+        <tr data-test-id="cell-role">
           <th scope="row"><code>cell</code></th>
           <td></td>
           <td><code>span</code></td>
