Spin Button Pattern: Add aria-invalid guidance for values outside allowed range (pull #825)
In response to issue #704, modified the roles, states, and properties section of the spin button pattern in aria-practices.html.

Added a bullet to the list of roles, states, and properties stating that aria-invalid is set true if it is possible for the textbox to contain a value that is not allowed.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2269,6 +2269,12 @@
             Otherwise, the spinbutton element has a label provided by
             <a href="#aria-label" class="property-reference">aria-label</a>.
           </li>
+          <li>
+            The spinbutton element has
+            <a href="#aria-invalid" class="state-reference">aria-invalid</a> set to <code>true</code>
+            if the value is outside the allowed range.
+            Note that most implementations prevent input of invalid values, but in some scenarios, blocking all invalid input may not be practical.
+          </li>
         </ul>
       </section>
     </section>
