typo: parrent -> parent

--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -478,7 +478,7 @@
       <section>
         <h2>Terms Used to Describe Trees</h2>
         <p>
-          A tree item that can be expanded to reveal child items is called a parrent node.
+          A tree item that can be expanded to reveal child items is called a parent node.
           It is a closed node when the children are hidden and an open node when it is expanded.
           An end node does not have any children.
           For a complete list of terms and definitions, see the
