typo: Tempature -> Temperature

--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -71,8 +71,8 @@
                 <th scope="col">Location</th>
                 <th scope="col">Approximate Date</th>
                 <th scope="col">Size of Army</th>
-                <th scope="col">Tempature C</th>
-                <th scope="col">Tempature F</th>
+                <th scope="col">Temperature C</th>
+                <th scope="col">Temperature F</th>
                 <th scope="col">Direction</th>
               </tr>
             </thead>
