typo: Double word "a"

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4200,7 +4200,7 @@
         For example, specifying an invalid value for <code>aria-rowindex</code> or setting it on some but not all rows in a table, could cause screen reader table reading functions to skip rows or simply stop functioning.
       </p>
       <p>
-        The following code demonstrates the use of <code>aria-rowcount</code> and <code>aria-rowindex</code> properties on a table containing a a hypothetical class list.
+        The following code demonstrates the use of <code>aria-rowcount</code> and <code>aria-rowindex</code> properties on a table containing a hypothetical class list.
       </p>
       <pre>
         <code>
